--- a/app/src/main/res/drawable/selected_option_border_bg.xml
+++ b/app/src/main/res/drawable/selected_option_border_bg.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/white" />
 
     <solid android:color="@android:color/white" />
 
